# chunkrag-course-project

./: .gitignore  Makefile  README.md  pyproject.toml
apps/: rag_demo_dashboard.py
configs/: chonkie_comparison.json  midway_mistral_endpoint.json  mistral_endpoint_smoke.json  quickstart.json  rigorous_local.json  rigorous_smoke.json  scc_rigorous_mistral.json  scc_rigorous_qwen.json
docs/: openwebui_scc_deployment.md  rag_roadmap.md
notebooks/: colab_mistral_experiment.ipynb  colab_qwen_experiment.ipynb
outputs/chonkie_report_run/: all_results.json  experiment_config.json
outputs/midway_mistral_endpoint/: aggregate_results.json  all_results.json
outputs/midway_mistral_endpoint_tuned/: aggregate_results.json  all_results.json  experiment_config.json
outputs/midway_mistral_endpoint_v2/: aggregate_results.json  all_results.json  experiment_config.json
outputs/report_run/: aggregate_results.json  (+2 more)
reports/: final_report.md  final_report_acl.tex  midway_report.md  midway_report_acl.tex  references.bib  results_summary.md
scripts/: build_reports.sh  chunkrag_scc.qsub  export_report_tables.py  plot_results.py  qwen_vllm_scc.qsub  run_demo_dashboard.sh  run_experiments.py  run_openwebui_local.sh  run_scc_experiments.sh  run_scc_vllm_server.sh  setup_demo_dashboard.sh  setup_openwebui_local.sh  setup_scc_env.sh  setup_scc_vllm_env.sh  submit_scc_rigorous.sh  submit_scc_vllm.sh  test_openai_compatible.py  tunnel_scc_vllm.sh  vllm_scc.qsub
tests/: test_chunking.py  test_evaluation.py  test_export_report_tables.py  test_generation.py  test_retrieval_and_schemas.py
(+249 files in other folders)
